new proj/src/objects/GE_PW_Strategic_Deal_Information__c.object
<CustomObject>
    <fields>
        <fullName>GE_PW_Customer_CTQ_2__c</fullName>
        <label>Customer CTQ-2</label>
        <picklist>
            <picklistValues>
                <fullName>Highest Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lowest Total Life Cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Removal Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smallest Footprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lowest O&amp;M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lowest Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lowest Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.BoP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.Energy Guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.Local Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.Local Presence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.Maintenance Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.Noise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12.Offsite Support (RoC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.Onsite Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14.Operating Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.Output</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16.Payment Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17.Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18.Project IRR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19.Project NPV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20.Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21.Reliability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22.Reputation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23.Service Capability</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Customer_CTQ_3__c</fullName>
        <label>Customer CTQ-3</label>
        <picklist>
            <picklistValues>
                <fullName>Highest Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lowest Total Life Cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Removal Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smallest Footprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lowest O&amp;M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lowest Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lowest Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.BoP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.Energy Guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.Local Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.Local Presence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.Maintenance Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.Noise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12.Offsite Support (RoC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.Onsite Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14.Operating Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.Output</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16.Payment Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17.Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18.Project IRR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19.Project NPV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20.Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21.Reliability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22.Reputation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23.Service Capability</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Customer_Detail__c</fullName>
        <label>Customer Detail</label>
        <picklist>
            <picklistValues>
                <fullName>New Venture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Established Company</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Customer_Purchase_from_similar_equ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Purchase from similar equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_Customer_current_cost_of_water__c</fullName>
        <label>Customer&apos;s current cost of water?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_Does_client_have_expe_on_Pricing__c</fullName>
        <label>Does client have expectation on Pricing?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_Does_client_have_funding_approved__c</fullName>
        <label>Does client have funding approved?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Does_contract_have_escalation__c</fullName>
        <label>Does contract have escalation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Economic_Buyer__c</fullName>
        <label>Economic Buyer</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Estimated_Monthly_Price__c</fullName>
        <label>Estimated Monthly Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PW_Estimated_annual_change_in_revenue__c</fullName>
        <label>Estimated annual change in revenue:</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PW_Existing_Contract_Length__c</fullName>
        <label>Existing Contract Length:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Existing_Contract_Terms_Used__c</fullName>
        <label>Existing Contract Terms Used</label>
        <picklist>
            <picklistValues>
                <fullName>GE Mobile Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Betz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecolochem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ionics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aqua Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Financial_justification_of_project__c</fullName>
        <label>Financial justification of project?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_Financing_Requested_Loan_Amount__c</fullName>
        <label>Financing Requested- Loan Amount</label>
        <picklist>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_GE_Water_Role__c</fullName>
        <label>GE Water Role</label>
        <picklist>
            <picklistValues>
                <fullName>Equipment Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnecting Piping+Design &amp; Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Operation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motor Control (MCC) Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elec. Interconnection+Design and Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_GFS_OTR_Surveyed_for_Upgrade__c</fullName>
        <label>GFS/OTR Surveyed for Upgrade?</label>
        <picklist>
            <picklistValues>
                <fullName>GFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neither</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Have_Key_Roles_been_Identified__c</fullName>
        <label>Have Key Players/Roles been Identified?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_IF_Y_what_is_Min_Take_Pay_quantity__c</fullName>
        <description>IF YES, what is Minimum Take or Pay quantity:</description>
        <label>IF YES,what is Minimum Take/Pay quantity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_If_Other_Specify__c</fullName>
        <label>If Other, Specify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_If_YES_what_is_the_purchase_price__c</fullName>
        <label>If YES, what is the purchase price:</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PW_If_an_RFQ_exists_did_GE_influence__c</fullName>
        <label>If an RFQ exists, did GE influence ?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_Info_Require_for_Quote_Preparation__c</fullName>
        <description>Information Required for Quote Preparation</description>
        <label>Info Required for Quote Preparation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_Is_escalation_current__c</fullName>
        <label>Is escalation current:</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Is_project_funded_by_government__c</fullName>
        <label>Is project funded by Government?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Is_there_a_flow_rate_change__c</fullName>
        <label>Is there a flow rate change:</label>
        <picklist>
            <picklistValues>
                <fullName>Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decrease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Change</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Is_there_a_process_change__c</fullName>
        <label>Is there a process change:</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Last_Site_Visit__c</fullName>
        <label>Last Site Visit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_List_the_influencers__c</fullName>
        <description>List the influencers (Decision makers)</description>
        <label>List the influencers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_Maintenance_factor_use_for_renewal__c</fullName>
        <label>Maintenance factor used for renewal:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Minimum_Take_or_Pay__c</fullName>
        <label>Minimum Take or Pay?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Mobile_Exchange_Fee__c</fullName>
        <label>Mobile Exchange Fee</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PW_NBV_of_Assets__c</fullName>
        <label>NBV of Assets:</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PW_NPS_Status__c</fullName>
        <label>NPS Status</label>
        <picklist>
            <picklistValues>
                <fullName>Promoter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detractor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_NUC_Al__c</fullName>
        <label>Alliance Pricing Used</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_NUC_CB__c</fullName>
        <label>Est. Customer Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PW_NUC_CIn__c</fullName>
        <label>Competitor Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_NUC_Del__c</fullName>
        <label>Deliverables</label>
        <length>32678</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_NUC_Enh__c</fullName>
        <label>Other Opps that will affect/enhance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_NUC_His__c</fullName>
        <label>Background Info &amp; Customer History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_NUC_MS__c</fullName>
        <label>Market Assessment Strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_NUC_OS__c</fullName>
        <label>Opportunity Scope Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_NUC_Risks__c</fullName>
        <label>Risks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_NUC_Sch__c</fullName>
        <label>Schedule</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_NUC_TC__c</fullName>
        <label>Ts &amp; Cs specific to Proposal</label>
        <length>32678</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_NUC_Typ__c</fullName>
        <label>Type of Request</label>
        <picklist>
            <picklistValues>
                <fullName>Verbal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP/RFQ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_OM__c</fullName>
        <label>OM%</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_PW_O_M_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>O&amp;M Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Strategic Deal Information</relationshipLabel>
        <relationshipName>Strategic_Deal_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PW_O_M_Term_Years__c</fullName>
        <label>O&amp;M Term (Years)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Strategic Deal Information</relationshipLabel>
        <relationshipName>Strategic_Deal_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PW_Option_to_Purchase_Existing_System__c</fullName>
        <label>Option to Purchase Existing System?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Original_Contract_Start_Date__c</fullName>
        <label>Original Contract Start Date:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PW_Other_Billing_Notes__c</fullName>
        <label>Other Billing Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_Our_strategy_to_beat_competition__c</fullName>
        <label>Our strategy to beat the competition ?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_Public_or_Private__c</fullName>
        <label>Public or Private?</label>
        <picklist>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Quote_Preparation_Help__c</fullName>
        <formula>HYPERLINK(&apos;../servlet/servlet.FileDownload?file=015A0000001Uirr&apos;, &apos;Click Here&apos;, &apos;_blank&apos;)</formula>
        <label>Quote Preparation Help</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Revenue_Impact__c</fullName>
        <label>Revenue Impact?</label>
        <picklist>
            <picklistValues>
                <fullName>Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decrease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Special_Financing_Comments__c</fullName>
        <label>Special Financing Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Special_Financing_Requirements__c</fullName>
        <label>Special Financing Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Financed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECA (Describe)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Government proccurement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Strategic_Deal_Info_Record_Name__c</fullName>
        <label>Strategic Deal Info Record Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Strategic_Objective__c</fullName>
        <label>Strategic Objective</label>
        <picklist>
            <picklistValues>
                <fullName>Bid to Win</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Battlefield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Systems_Proposed_in_Past__c</fullName>
        <label>Systems Proposed in Past</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_TML_CS_CTQ1__c</fullName>
        <label>Compeitor Stregnth for CTQ-1</label>
        <picklist>
            <picklistValues>
                <fullName>0-Cannot Satisfy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 -Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Can Easilty Satisfy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_TML_CS_CTQ2__c</fullName>
        <label>Compeitor Stregnth for CTQ-2</label>
        <picklist>
            <picklistValues>
                <fullName>0-Cannot Satisfy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 -Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Can Easilty Satisfy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_TML_CS_CTQ3__c</fullName>
        <label>Compeitor Stregnth for CTQ-3</label>
        <picklist>
            <picklistValues>
                <fullName>0-Cannot Satisfy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 -Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Can Easilty Satisfy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Technical_Buyer__c</fullName>
        <label>Technical Buyer</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Time_Period_of_the_CM_OM__c</fullName>
        <label>Time Period of the CM/OM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Total_Weighting__c</fullName>
        <formula>VALUE( Text(GE_PW_CTQ_1_Weight__c )) + VALUE( Text( GE_PW_CTQ_2_Weight__c )) + VALUE( Text( GE_PW_CTQ_3_Weight__c )) + VALUE( Text( GE_PW_CTQ_4_Weight__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Weighting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PW_User_Buyer__c</fullName>
        <label>User Buyer</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Variable_Processing_Fee__c</fullName>
        <label>Variable Processing Fee</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PW_What_is_the_Use_of_the_System__c</fullName>
        <label>What is the Use of the System?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_What_is_the_winning_price__c</fullName>
        <label>What is the winning price ?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_What_price_has_customer_seen__c</fullName>
        <label>What price has customer seen?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_What_problem_is_being_solved__c</fullName>
        <label>What problem is being solved?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_project_require_GE_ECA_Financing__c</fullName>
        <label>Does project require GE/ECA Financing ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_there_technology_differentiation__c</fullName>
        <label>Is there technology differentiation ?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PWhat_is_the_payback_return_to_client__c</fullName>
        <label>What is the payback/return to client ?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GW_PW_Barriers_to_project_approval__c</fullName>
        <label>Barriers to project approval ?</label>
        <type>TextArea</type>
    </fields>
    <label>Strategic Deal Information</label>
    <nameField>
        <label>Strategic Deal Info Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategic Deal Information</pluralLabel>
    <recordTypes>
        <fullName>GE_PW_Aero_Packaging</fullName>
        <active>true</active>
        <label>GE PW Aero Packaging</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PW_Aero_Services</fullName>
        <active>true</active>
        <label>GE PW Aero Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PW_Nuclear</fullName>
        <active>true</active>
        <label>GE PW Nuclear</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PW_Thermal</fullName>
        <active>true</active>
        <label>GE PW Thermal</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PW_WES_After_Market_Services</fullName>
        <active>true</active>
        <label>GE Water ES After Market Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PW_WES_BOO</fullName>
        <active>true</active>
        <label>GE Water ES BOO</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PW_WES_Capital_Equipment</fullName>
        <active>true</active>
        <label>GE Water ES Capital Equipment</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PW_WES_Extended_Scope</fullName>
        <active>true</active>
        <label>GE Water ES Extended Scope</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PW_WES_Fast_Track</fullName>
        <active>true</active>
        <label>GE Water ES Fast Track</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PW_WES_Flow_Direct_Indirect</fullName>
        <active>true</active>
        <label>GE Water ES Flow Direct/Indirect</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PW_WES_Mobile</fullName>
        <active>true</active>
        <label>GE Water ES Mobile</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PW_Wind_Services</fullName>
        <active>true</active>
        <label>GE PW Wind Services</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>